# file_storage_flask

./: .env.example  .gitignore  docker-compose.yml
app/: Dockerfile  __init__.py  config.py  pyproject.toml
app/main/: routes.py
app/models/: __init__.py  file.py  user.py
app/repositories/: base.py  file.py  user.py
app/services/: file.py  minio.py  user.py
app/swagger/: __init__.py  swagger_models.py
migrations/versions/: 8a7b9951feca_initial_migration.py
